# magiceye

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
andriod_opengl/: CMakeLists.txt  main.cpp
andriod_opengl/android/: gradle.properties
andriod_opengl/android/app/: build.gradle
andriod_opengl/android/app/src/main/: AndroidManifest.xml
andriod_opengl/android/app/src/main/java/: MainActivity.kt
andriod_opengl/android/app/src/main/res/xml/: file_paths.xml
cli/: CMakeLists.txt  ParseArgs.h  stl_to_sirds.cpp
gui/: CMakeLists.txt  customwidgets.cpp  customwidgets.h  main.cpp  openfile.cpp  openfile.h  vec3.h
lib/: BlueNoise.h  CMakeLists.txt  CMakelists.txt  Camera.h  DepthMapGenerator.h  DepthPostProcessor.h  EdgeSmoother.h  EdgeSmother.h  Laplace.h  Options.h  SIRDSGenerator.h  SeparationCalibrator.h  StereogramGenerator.h  Stlsmoother.h  TextureSampler.h  logger.h  objtostl.h  stb_image_impl.h  vec3.h  vectorutils.h
src/: CMakelists.txt  Camera.h  DepthMapGenerator.h  Options.h  ParseArgs.h  SIRDSGenerator.h  StereogramGenerator.h  TextureSampler.h  stb_image.h  stb_image_write.h  stl_to_sirds.cpp  stl_to_sirds_full - Copy.cpp  stl_to_sirds_full.cpp  vectorutils.h
unittests/: CMakeLists.txt  magiceyetests.cpp
unittests/stl/: CAT.stl  rect.stl
